k8s/thingsboard.yml
#
# Copyright © 2016-2020 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: thingsboard
spec:
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: zookeeper:3.5
        ports:
        - containerPort: 2181
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 2181
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 2181
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
  - name: zk-port
    port: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-kafka
  namespace: thingsboard
spec:
  selector:
    matchLabels:
      app: tb-kafka
  template:
    metadata:
      labels:
        app: tb-kafka
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: wurstmeister/kafka:2.12-2.2.1
        ports:
        - containerPort: 9092
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 9092
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 9092
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-kafka
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-kafka
  ports:
  - name: tb-kafka-port
    port: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-redis
  namespace: thingsboard
spec:
  selector:
    matchLabels:
      app: tb-redis
  template:
    metadata:
      labels:
        app: tb-redis
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: redis:4.0
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-redis
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-redis
  ports:
  - name: tb-redis-port
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-js-executor
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-js-executor
  template:
    metadata:
      labels:
        app: tb-js-executor
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-js-executor:latest
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-node
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-node
  template:
    metadata:
      labels:
        app: tb-node
    spec:
      volumes:
        - name: tb-node-config
          configMap:
            name: tb-node-config
            items:
            - key: conf
              path:  thingsboard.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-node:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9001
          name: rpc
        volumeMounts:
          - mountPath: /config
            name: tb-node-config
        livenessProbe:
          httpGet:
            path: /login
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-node
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-node
  ports:
  - port: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-mqtt-transport
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-mqtt-transport
  template:
    metadata:
      labels:
        app: tb-mqtt-transport
    spec:
      volumes:
        - name: tb-mqtt-transport-config
          configMap:
            name: tb-mqtt-transport-config
            items:
            - key: conf
              path:  tb-mqtt-transport.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-mqtt-transport:latest
        ports:
        - containerPort: 1883
          name: mqtt
        volumeMounts:
          - mountPath: /config
            name: tb-mqtt-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 1883
        livenessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 1883
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-mqtt-transport
  namespace: thingsboard
spec:
  type: LoadBalancer
  selector:
    app: tb-mqtt-transport
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-http-transport
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-http-transport
  template:
    metadata:
      labels:
        app: tb-http-transport
    spec:
      volumes:
        - name: tb-http-transport-config
          configMap:
            name: tb-http-transport-config
            items:
            - key: conf
              path:  tb-http-transport.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-http-transport:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /config
            name: tb-http-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8080
        livenessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-http-transport
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-http-transport
  ports:
  - port: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-coap-transport
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-coap-transport
  template:
    metadata:
      labels:
        app: tb-coap-transport
    spec:
      volumes:
        - name: tb-coap-transport-config
          configMap:
            name: tb-coap-transport-config
            items:
            - key: conf
              path:  tb-coap-transport.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-coap-transport:latest
        ports:
        - containerPort: 5683
          name: coap
          protocol: UDP
        volumeMounts:
          - mountPath: /config
            name: tb-coap-transport-config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-coap-transport
  namespace: thingsboard
spec:
  type: LoadBalancer
  selector:
    app: tb-coap-transport
  ports:
  - port: 5683
    name: coap
    protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-web-ui
  namespace: thingsboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-web-ui
  template:
    metadata:
      labels:
        app: tb-web-ui
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: volodymyrbabak/tb-web-ui:latest
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-ui
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-web-ui
  ports:
  - port: 8080
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tb-ingress
  namespace: thingsboard
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/.*
        backend:
          serviceName: tb-http-transport
          servicePort: 8080
      - path: /static/rulenode/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /static/.*
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
      - path: /index.html.*
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
      - path: /
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
      - path: /.*
        backend:
          serviceName: tb-node
          servicePort: 8080
---
